# trading212-rest

./: .pre-commit-config.yaml  Readme.md  pyproject.toml
trading212_rest/: __init__.py
