[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading212-api-extended"
version = "1.0.0"
description = "An Extended (unofficial) Rest API client for Trading212"
authors = [
    {name = "Antonio Caserta", email = "a.caserta@proton.me"},
]
readme = "Readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests"
]
keywords = ["trading212", "api", "client", "trading", "finance"]
version = "0.5.0"

[project.urls]
homepage = "https://github.com/amstrdm/trading212-api-extended"

[tool.setuptools.packages.find]
["trading212_rest*"]
